# agentic-orchestration-app

./: .dockerignore  .env.example  .gitignore  Agentic-AI-Theory.md  CHANGELOG.md  Dockerfile  Makefile  OPENAI_INTEGRATION.md  README.md  STATUS.md  docker-compose.yml  fix_langchain.sh  project_plan.md  pyproject.toml  requirements.txt  setup_python312.sh
app/: __init__.py  main.py
app/agents/: __init__.py  communication.py  decision.py  general.py  knowledge.py  professional.py  router.py
app/api/: models.py  routes.py
app/config/: llm.py  production.py  settings.py
app/database/: __init__.py  models.py  session.py
app/orchestration/: __init__.py  graph.py  state.py
app/prompts/: __init__.py  templates.py
app/rag/: __init__.py  embeddings.py  ingestion.py  retriever.py  stores.py
app/services/: conversation.py
app/utils/: logging.py
data/database/: conversations.db
docs/: API_QUICK_REFERENCE.md  API_TESTING.md  ARCHITECTURE.md  BEFORE_RAG_EXAMPLES.md  DEPLOYMENT.md  FRONTEND_INTEGRATION.md  ITERATION_TEST_PROMPTS.md  MULTI_ITERATION.md  PHASE2_STATE_MANAGEMENT.md  PHASE3_QUICK_TEST.md  PHASE3_TESTING_GUIDE.md  PHASE4_ROUTER.md  README.md  SHARED_MEMORY.md  STATEGRAPH_VISUALIZATION.md  STATE_CHEATSHEET.md  STATE_MANAGEMENT_GUIDE.md  TESTING.md  state_comparison.md
front_end/: README.md  package-lock.json  package.json  test-3d.html
front_end/src/: App.css  App.jsx  index.css
front_end/src/components/: Agent3D-debug.jsx  Agent3D.jsx  Logo3D.jsx
scripts/: example_state.py  ingest_documents.py  test_all_agents.sh  test_api_complete.sh  test_llm.py  verify_integration.sh
tests/: test_agents.py  test_api.py  test_router.py  test_routing.py  test_state.py
